--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,9 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+group= 'com.github.francisnnumbi'
 
-android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.0"
-
-    defaultConfig {
-        applicationId "fnn.smirl.ttsview"
-        minSdkVersion 14
-        targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+repositories{
+	mavenCentral()
 }
 
 dependencies {
